--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.27.14",
+    "react-toastify": "^7.0.4",
     "redux-persist": "^6.0.0"
   },
   "scripts": {
