--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.9",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "jwt-decode": "^3.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
